--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 
 <div class="game-grid">
     <!-- Game Card -->
-    <a href="https://example.com/game1" class="game-card" target="_blank">
-        <img src="https://via.placeholder.com/300x300" alt="Game 1">
+    <a href="https://lowkunblockedgames.github.io/PPG/" class="game-card" target="_blank">
+        <img src="https://images.gog-statics.com/5ffaf8774afa96332c101594d9046271d002b90bc1e2ba1fd1ed3d4da2f8d8df.jpg" alt="People Playground">
         <div class="game-title">Game 1</div>
     </a>
 
