--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <!-- Game Card -->
     <a href="https://lowkunblockedgames.github.io/PPG/" class="game-card" target="_blank">
         <img src="https://images.gog-statics.com/5ffaf8774afa96332c101594d9046271d002b90bc1e2ba1fd1ed3d4da2f8d8df.jpg" alt="People Playground">
-        <div class="game-title">Game 1</div>
+        <div class="game-title">People Playground</div>
     </a>
 
     <!-- Example: Add more cards -->
