--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
     </a>
 
     <!-- Example: Add more cards -->
-    <a href="https://example.com/game2" class="game-card" target="_blank">
-        <img src="https://via.placeholder.com/300x300" alt="Game 2">
-        <div class="game-title">Game 2</div>
+    <a href="https://lowkunblockedgames.github.io/karlson" class="game-card" target="_blank">
+        <img src="https://imgcdn1.nexarda.com/uploads/-/2022/1648233516-c59e1ca3e7bb010746e3f4733e30cb1d9dc8db71d221be34e67f8ee928066e87.jpg" alt="karlson">
+        <div class="game-title">Karlson</div>
     </a>
 </div>
 
