--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
 
 <div class="game-grid">
     <!-- Game Card -->
-    <a href="https://lowkunblockedgames.github.io/PPG/" class="game-card" target="_blank">
+    <a href="https://lwklearning.github.io/PPG/" class="game-card" target="_blank">
         <img src="https://images.gog-statics.com/5ffaf8774afa96332c101594d9046271d002b90bc1e2ba1fd1ed3d4da2f8d8df.jpg" alt="People Playground">
         <div class="game-title">People Playground</div>
     </a>
 
     <!-- Example: Add more cards -->
-    <a href="https://lowkunblockedgames.github.io/karlson" class="game-card" target="_blank">
+    <a href="https://lwklearning.github.io/karlson/" class="game-card" target="_blank">
         <img src="https://imgcdn1.nexarda.com/uploads/-/2022/1648233516-c59e1ca3e7bb010746e3f4733e30cb1d9dc8db71d221be34e67f8ee928066e87.jpg" alt="karlson">
         <div class="game-title">Karlson</div>
     </a>
