--- a/index.html
+++ b/index.html
@@ -87,5 +87,10 @@
     </a>
 </div>
 
+    <a href="https://lwklearning.github.io/milkman/" class="game-card" target="_blank">
+        <img src="https://img.itch.zone/aW1nLzMzMjAwNTMucG5n/original/v8HZu7.png" alt="milk karlson">
+        <div class="game-title">Milkman Karlson</div>
+    </a>
+</div>
 </body>
 </html>
