--- a/index.html
+++ b/index.html
@@ -85,6 +85,11 @@
         <img src="https://imgcdn1.nexarda.com/uploads/-/2022/1648233516-c59e1ca3e7bb010746e3f4733e30cb1d9dc8db71d221be34e67f8ee928066e87.jpg" alt="karlson">
         <div class="game-title">Karlson</div>
     </a>
+
+    <a href="https://lwklearning.github.io/piss-tower/" class="game-card" target="_blank">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQUCmfhJNu4ZIB-I7pdyNkykcWRFT4c8j5B--RoyyHjuaDZ05UAmOu2L6dsYSNZtyeg8uJc&s=10" alt="pizza tower">
+        <div class="game-title">Pizza Tower</div>
+    </a>
 </div>
 
 </div>
