--- a/index.html
+++ b/index.html
@@ -90,6 +90,11 @@
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQUCmfhJNu4ZIB-I7pdyNkykcWRFT4c8j5B--RoyyHjuaDZ05UAmOu2L6dsYSNZtyeg8uJc&s=10" alt="pizza tower">
         <div class="game-title">Pizza Tower</div>
     </a>
+
+    <a href="https://lwklearning.github.io/ultrakill/" class="game-card" target="_blank">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT_YBJHxGHj-s2ZVTlA7JVpaYveWuvhmUKAIg&s" alt="ultrakill">
+        <div class="game-title">Ultrakill</div>
+    </a>
 </div>
 
 </div>
