--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <div class="game-title">Pizza Tower</div>
     </a>
 
-    <a href="https://lwklearning.github.io/ultrakill/" class="game-card" target="_blank">
+    <a href="https://lwklearning.github.io/ultraoof/" class="game-card" target="_blank">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT_YBJHxGHj-s2ZVTlA7JVpaYveWuvhmUKAIg&s" alt="ultrakill">
         <div class="game-title">Ultrakill</div>
     </a>
