--- a/index.html
+++ b/index.html
@@ -94,6 +94,10 @@
     <a href="https://lwklearning.github.io/ultraoof/" class="game-card" target="_blank">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT_YBJHxGHj-s2ZVTlA7JVpaYveWuvhmUKAIg&s" alt="ultrakill">
         <div class="game-title">Ultrakill</div>
+
+        <a href="https://lwklearning.github.io/raft/" class="game-card" target="_blank">
+        <img src="https://store-images.s-microsoft.com/image/apps.17462.14102062639781722.573266e7-686b-44fb-9e48-a2585bc2170f.951859b9-7b83-401e-8a0b-a6626a3679ac?q=90&w=480&h=270" alt="raft">
+        <div class="game-title">Raft</div>
     </a>
 </div>
 
