--- a/index.html
+++ b/index.html
@@ -104,6 +104,11 @@
         <img src="https://sm.ign.com/ign_ap/cover/g/getting-ov/getting-over-it-with-bennett-foddy_3bxh.jpg" alt="getting over it">
         <div class="game-title">Getting Over It</div>
     </a>
+
+            <a href="https://lwklearning.github.io/tattletail/" class="game-card" target="_blank">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTVLfgGq_X4NDjtdY1U3AM5nmJonWcfG8PC5w&s" alt="tattletail">
+        <div class="game-title">Tattletail</div>
+    </a>
 </div>
 
 </div>
