--- a/index.html
+++ b/index.html
@@ -109,6 +109,21 @@
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTVLfgGq_X4NDjtdY1U3AM5nmJonWcfG8PC5w&s" alt="tattletail">
         <div class="game-title">Tattletail</div>
     </a>
+
+                <a href="https://lwklearning.github.io/baldiremaster/" class="game-card" target="_blank">
+        <img src="https://static.wikia.nocookie.net/baldis-basics-in-education-and-learning/images/5/5d/Baldi%27s_Basics_Classic_Remastered_Cover.png/revision/latest?cb=20210331231443" alt="baldi classic remaster">
+        <div class="game-title">Baldi's Basics Classic Remastered</div>
+    </a>
+
+                <a href="https://lwklearning.github.io/baldiplus/" class="game-card" target="_blank">
+        <img src="https://static.wikia.nocookie.net/baldis-basics-in-education-and-learning/images/3/36/Baldi%27s_Basics_Plus_Cover.png/revision/latest?cb=20251023080140" alt="baldi boi">
+        <div class="game-title">Baldi's Basics Plus</div>
+    </a>
+        
+                <a href="https://lwklearning.github.io/bendy/" class="game-card" target="_blank">
+        <img src="https://static.wikia.nocookie.net/baldis-basics-in-education-and-learning/images/3/36/Baldi%27s_Basics_Plus_Cover.png/revision/latest?cb=20251023080140" alt="Bendy And The Ink Machine">
+        <div class="game-title">Bendy And The Ink Machine</div>
+    </a>
 </div>
 
 </div>
