--- a/index.html
+++ b/index.html
@@ -111,17 +111,17 @@
     </a>
 
                 <a href="https://lwklearning.github.io/baldiremaster/" class="game-card" target="_blank">
-        <img src="https://static.wikia.nocookie.net/baldis-basics-in-education-and-learning/images/5/5d/Baldi%27s_Basics_Classic_Remastered_Cover.png/revision/latest?cb=20210331231443" alt="baldi classic remaster">
+        <img src="https://images.gamebanana.com/img/ss/wips/6771a512c6655.jpg" alt="baldi classic remaster">
         <div class="game-title">Baldi's Basics Classic Remastered</div>
     </a>
 
                 <a href="https://lwklearning.github.io/baldiplus/" class="game-card" target="_blank">
-        <img src="https://static.wikia.nocookie.net/baldis-basics-in-education-and-learning/images/3/36/Baldi%27s_Basics_Plus_Cover.png/revision/latest?cb=20251023080140" alt="baldi boi">
+        <img src="https://images.gamebanana.com/img/ss/mods/6664f1a170ae0.jpg" alt="baldi boi">
         <div class="game-title">Baldi's Basics Plus</div>
     </a>
         
                 <a href="https://lwklearning.github.io/bendy/" class="game-card" target="_blank">
-        <img src="https://static.wikia.nocookie.net/baldis-basics-in-education-and-learning/images/3/36/Baldi%27s_Basics_Plus_Cover.png/revision/latest?cb=20251023080140" alt="Bendy And The Ink Machine">
+        <img src="https://cdn1.epicgames.com/spt-assets/0b1283e5bfa64ad48f3862b79abc20b9/bendy-and-the-ink-machine-1e8cj.png" alt="Bendy And The Ink Machine">
         <div class="game-title">Bendy And The Ink Machine</div>
     </a>
 </div>
