--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script>(function(s){s.dataset.zone='10287784',s.src='https://groleegni.net/vignette.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Lowk Learning</title>
+<title>LWK Learning</title>
 <style>
     body {
         margin: 0;
