--- a/index.html
+++ b/index.html
@@ -141,17 +141,37 @@
     </a>
                 
                 <a href="https://lwklearning.github.io/fnaf4/" class="game-card" target="_blank">
-        <img src="https://i.pinimg.com/474x/e1/84/b7/e184b7494ea992c6b861a2a66a5eae1e.jpg" alt="fnaf 4">
+        <img src="https://geometry-game.io/data/image/game/five-nights-at-freddy-s-4/five-nights-at-freddy-s-4.png" alt="fnaf 4">
         <div class="game-title">FnaF 4</div>
-    </a>        
+    </a> 
+                        <a href="https://lwklearning.github.io/sl/" class="game-card" target="_blank">
+        <img src="https://img.itch.zone/aW1nLzkzNjI0NjQuanBn/315x250%23c/MdvLBo.jpg" alt="sistahh!">
+        <div class="game-title">Sister Location</div>
+    </a>
                 <a href="https://lwklearning.github.io/ucn/" class="game-card" target="_blank">
         <img src="https://www5.minijuegosgratis.com/v3/games/thumbnails/240344_7_sq.jpg" alt="ultimate thing">
         <div class="game-title">Ultimate Custom Night</div>
     </a>        
-                <a href="https://lwklearning.github.io/sl/" class="game-card" target="_blank">
-        <img src="https://img.itch.zone/aW1nLzkzNjI0NjQuanBn/315x250%23c/MdvLBo.jpg" alt="sistahh!">
-        <div class="game-title">Sister Location</div>
-    </a>
+
+                        <a href="https://lwklearning.github.io/half-life/" class="game-card" target="_blank">
+        <img src="https://assets-prd.ignimgs.com/2022/01/26/half-life-generic-1643168587518.jpg?crop=1%3A1%2Csmart&width=348&height=348&format=jpg&auto=webp&quality=80" alt="half life">
+        <div class="game-title">Half Life</div>
+    </a>    
+
+   <a href="https://lwklearning.github.io/MGS/" class="game-card" target="_blank">
+        <img src="https://gaming-cdn.com/images/news/articles/1556/cover/1000x563/konami-doesn-t-rule-out-further-metal-gear-solid-remakes-cover647709c9b6371.jpg" alt="metal gear solid">
+        <div class="game-title">Metal Gear Solid</div>
+    </a>    
+
+       <a href="https://lwklearning.github.io/hw/" class="game-card" target="_blank">
+        <img src="https://assets.funnygames.org/0/13150/66141/1024x1024/happy-wheels.webp" alt="hw">
+        <div class="game-title">Happy Wheels</div>
+    </a>    
+
+           <a href="https://lwklearning.github.io/sh/" class="game-card" target="_blank">
+        <img src="https://e.snmc.io/lk/g/x/9da523aabcbcbba94248c7948151ff40/5280561" alt="superhot">
+        <div class="game-title">SuperHot</div>
+    </a>    
 </div>
 
 </div>
