--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <div class="game-title">Metal Gear Solid</div>
     </a>    
 
-       <a href="https://lwklearning.github.io/hw/" class="game-card" target="_blank">
+       <a href="https://lwklearning.github.io/HW/" class="game-card" target="_blank">
         <img src="https://assets.funnygames.org/0/13150/66141/1024x1024/happy-wheels.webp" alt="hw">
         <div class="game-title">Happy Wheels</div>
     </a>    
