--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
     </a>    
 
        <a href="https://lwklearning.github.io/HW/" class="game-card" target="_blank">
-        <img src="https://assets.funnygames.org/0/13150/66141/1024x1024/happy-wheels.webp" alt="hw">
-        <div class="game-title">Happy Wheels</div>
+        <img src="https://static.wikia.nocookie.net/gdmusic/images/b/bf/GeometryDashLite.png/revision/latest?cb=20210407020837" alt="hehe">
+        <div class="game-title">Geometry Dash Lite</div>
     </a>    
 
            <a href="https://lwklearning.github.io/sh/" class="game-card" target="_blank">
