--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
     </a>    
 
        <a href="https://lwklearning.github.io/HW/" class="game-card" target="_blank">
-        <img src="https://static.wikia.nocookie.net/gdmusic/images/b/bf/GeometryDashLite.png/revision/latest?cb=20210407020837" alt="hehe">
+        <img src="https://candyclicker.io/upload/imgs/geometry-dash-lite.jpg" alt="hehe">
         <div class="game-title">Geometry Dash Lite</div>
     </a>    
 
