--- a/index.html
+++ b/index.html
@@ -86,6 +86,11 @@
         <div class="game-title">Karlson</div>
     </a>
 
+               <a href="https://lwklearning.github.io/MC/" class="game-card" target="_blank">
+        <img src="https://filterforge.com/filters/11635.jpg" alt="MC">
+        <div class="game-title">Minecraft</div>
+    </a> 
+
     <a href="https://lwklearning.github.io/piss-tower/" class="game-card" target="_blank">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQUCmfhJNu4ZIB-I7pdyNkykcWRFT4c8j5B--RoyyHjuaDZ05UAmOu2L6dsYSNZtyeg8uJc&s=10" alt="pizza tower">
         <div class="game-title">Pizza Tower</div>
