--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="referrer" content="no-referrer-when-downgrade" />
     <link rel="icon" type="image/x-icon" href="/favicon.png">
     <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
