--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script data-cfasync="false" src="//dcbbwymp1bhlf.cloudfront.net/?wbbcd=1231101"></script>
     <meta name='admaven-placement' content=BqjwHqdCE>
     <meta name="referrer" content="no-referrer-when-downgrade" />
     <link rel="icon" type="image/x-icon" href="/favicon.png">
