--- a/index.html
+++ b/index.html
@@ -155,6 +155,14 @@
         <img src="https://img.itch.zone/aW1nLzkzNjI0NjQuanBn/315x250%23c/MdvLBo.jpg" alt="sistahh!">
         <div class="game-title">Sister Location</div>
     </a>
+                                <a href="https://lwklearning.github.io/world/" class="game-card" target="_blank">
+        <img src="https://cdn.jsdelivr.net/gh/gn-math/covers@main/190.png" alt="world!">
+        <div class="game-title">FnaF World</div>
+    </a>
+                                <a href="https://lwklearning.github.io/granny/" class="game-card" target="_blank">
+        <img src="https://cdn.jsdelivr.net/gh/gn-math/covers@main/90.png" alt="granny">
+        <div class="game-title">Granny</div>
+    </a>
                 <a href="https://lwklearning.github.io/ucn/" class="game-card" target="_blank">
         <img src="https://www5.minijuegosgratis.com/v3/games/thumbnails/240344_7_sq.jpg" alt="ultimate thing">
         <div class="game-title">Ultimate Custom Night</div>
