--- a/index.html
+++ b/index.html
@@ -187,6 +187,10 @@
         <img src="https://e.snmc.io/lk/g/x/9da523aabcbcbba94248c7948151ff40/5280561" alt="superhot">
         <div class="game-title">SuperHot</div>
     </a>    
+                   <a href="https://lwklearning.github.io/bit/" class="game-card" target="_blank">
+        <img src="https://bitlife-game.io/data/image/game/bitlife-game.jpg" alt="life bit">
+        <div class="game-title">LifeBit</div>
+    </a>  
 </div>
 
 </div>
