--- a/index.html
+++ b/index.html
@@ -193,7 +193,13 @@
         <img src="https://aqlsbp_qyzytrp3ca09x.c.websim.com/SlimeRancher.png" alt="raanching">
         <div class="game-title">Slime Rancher</div>
     </a>  
+
+                                 <a href="https://lwklearning.github.io/rigid/" class="game-card" target="_blank">
+        <img src="https://raw.githubusercontent.com/LWKlearning/LWKlearning.github.io/e6dff357d36e10bcda5baecd0cbc14e04a44315f/Screenshot%202025-12-21%20233612.svg" alt="raging rigidly">
+        <div class="game-title">RigidRAGE v4</div>
+    </a>
 </div>
+
 
 </div>
 </body>
