--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
 <h1>Lowk Learning</h1>
 
 <div class="game-grid">
+
+        <a href="https://lwklearning.github.io/chat/" class="game-card" target="_blank">
+        <img src="https://github.com/LWKlearning/chat/blob/main/New%20Project%20(7).png?raw=true" alt="yapalot">
+        <div class="game-title">Chat</div>
+    </a>
     <!-- Game Card -->
     <a href="https://lwklearning.github.io/PPG/" class="game-card" target="_blank">
         <img src="https://images.gog-statics.com/5ffaf8774afa96332c101594d9046271d002b90bc1e2ba1fd1ed3d4da2f8d8df.jpg" alt="People Playground">
